# factorio-mod-downloader

./: README.md  modlist  pyproject.toml
factorio_mod_downloader/: __main__.py  dependencies.py  download.py  models.py
tests/: test_data.py  test_dependencies.py  test_models.py
